[package]
name = "tree-sitter-tags"
description = "Library for extracting tag information"
version = "0.20.2"
authors = [
	"Max Brunsfeld <maxbrunsfeld@gmail.com>",
	"Patrick Thomson <patrickt@github.com>",
]
license = "MIT"
readme = "README.md"
edition = "2021"
keywords = ["incremental", "parsing", "syntax", "tagging"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter"
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
regex.workspace = true
memchr.workspace = true
thiserror.workspace = true

[dependencies.tree-sitter]
version = "0.20.10"
path = "../lib"
