[package]
name = "tree-sitter-tags"
version.workspace = true
description = "Library for extracting tag information"
authors = [
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Patrick Thomson <patrickt@github.com>",
]
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["incremental", "parsing", "syntax", "tagging"]
categories = ["parsing", "text-editors"]

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
memchr.workspace = true
regex.workspace = true
thiserror.workspace = true

tree-sitter.workspace = true
