[package]
name = "xtask"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
git2.workspace = true
indoc.workspace = true
toml.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
