[package]
name = "tree-sitter-loader"
version.workspace = true
description = "Locates, builds, and loads tree-sitter grammars at runtime"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
wasm = ["tree-sitter/wasm"]

[dependencies]
anyhow.workspace = true
cc.workspace = true
dirs.workspace = true
fs4.workspace = true
indoc.workspace = true
libloading.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
which.workspace = true

[dependencies.tree-sitter]
version = "0.21.0"
path = "../../lib"

[dependencies.tree-sitter-highlight]
version = "0.21.0"
path = "../../highlight"

[dependencies.tree-sitter-tags]
version = "0.21.0"
path = "../../tags"
