[package]
name = "tree-sitter-loader"
version.workspace = true
description = "Locates, builds, and loads tree-sitter grammars at runtime"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
wasm = ["tree-sitter/wasm"]

[dependencies]
anyhow.workspace = true
cc.workspace = true
dirs.workspace = true
fs4.workspace = true
indoc.workspace = true
libloading.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

tree-sitter.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-tags.workspace = true
