[package]
name                   = "tree-sitter-cli"
version.workspace      = true
description            = "CLI tool for developing, testing, and using Tree-sitter parsers"
authors.workspace      = true
edition.workspace      = true
rust-version.workspace = true
readme                 = "README.md"
homepage.workspace     = true
repository.workspace   = true
documentation          = "https://docs.rs/tree-sitter-cli"
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
include                = [ "build.rs", "README.md", "LICENSE", "benches/*", "src/**" ]

[lints]
workspace = true

[lib]
path = "src/tree_sitter_cli.rs"

[[bin]]
doc  = false
name = "tree-sitter"
path = "src/main.rs"

[[bench]]
harness = false
name    = "benchmark"

[features]
default = [ "qjs-rt" ]
qjs-rt  = [ "tree-sitter-generate/qjs-rt" ]
wasm    = [ "tree-sitter/wasm", "tree-sitter-loader/wasm" ]

[dependencies]
ansi_colours.workspace          = true
anstyle.workspace               = true
anyhow.workspace                = true
bstr.workspace                  = true
clap.workspace                  = true
clap_complete.workspace         = true
clap_complete_nushell.workspace = true
crc32fast.workspace             = true
ctor.workspace                  = true
ctrlc.workspace                 = true
dialoguer.workspace             = true
glob.workspace                  = true
heck.workspace                  = true
html-escape.workspace           = true
indoc.workspace                 = true
log.workspace                   = true
memchr.workspace                = true
rand.workspace                  = true
regex.workspace                 = true
schemars.workspace              = true
semver.workspace                = true
serde.workspace                 = true
serde_json.workspace            = true
similar.workspace               = true
streaming-iterator.workspace    = true
thiserror.workspace             = true
tiny_http.workspace             = true
walkdir.workspace               = true
wasmparser.workspace            = true
webbrowser.workspace            = true

tree-sitter.workspace           = true
tree-sitter-config.workspace    = true
tree-sitter-generate.workspace  = true
tree-sitter-highlight.workspace = true
tree-sitter-loader.workspace    = true
tree-sitter-tags.workspace      = true

[dev-dependencies]
encoding_rs            = "0.8.35"
tree_sitter_proc_macro = { package = "tree-sitter-tests-proc-macro", path = "src/tests/proc_macro" }
widestring             = "1.2.1"

pretty_assertions.workspace = true
tempfile.workspace          = true
unindent.workspace          = true
