[package]
name = "tree-sitter-language"
description = "The tree-sitter Language type, used by the library and by language implementations"
version = "0.1.5"
authors.workspace = true
edition.workspace = true
rust-version = "1.77"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tree-sitter-language"
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "development-tools::ffi", "parsing"]

build = "build.rs"
links = "tree-sitter-language"

[lints]
workspace = true

[lib]
path = "src/language.rs"
