[package]
name                   = "tree-sitter-loader"
version.workspace      = true
description            = "Locates, builds, and loads tree-sitter grammars at runtime"
authors.workspace      = true
edition.workspace      = true
rust-version.workspace = true
readme                 = "README.md"
homepage.workspace     = true
repository.workspace   = true
documentation          = "https://docs.rs/tree-sitter-loader"
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[lib]
path = "src/loader.rs"

[lints]
workspace = true

[features]
default = [ "tree-sitter-highlight", "tree-sitter-tags" ]
wasm    = [ "tree-sitter/wasm" ]

[dependencies]
cc.workspace         = true
etcetera.workspace   = true
indoc.workspace      = true
libloading.workspace = true
log.workspace        = true
once_cell.workspace  = true
regex.workspace      = true
semver.workspace     = true
serde.workspace      = true
serde_json.workspace = true
tempfile.workspace   = true
thiserror.workspace  = true

tree-sitter           = { workspace = true }
tree-sitter-highlight = { optional = true, workspace = true }
tree-sitter-tags      = { optional = true, workspace = true }
